# TramDag

./: .gitignore  1_0_create_config.ipynb  1_create_configuration_file.ipynb  2_0_train_tramdag.ipynb  2_tram_dag_api.ipynb  API_Reproduce_TramDag_Experiment_6_1_complexDGP_CS_3Variables.ipynb  API_Reproduce_TramDag_Experiment_6_2_mixed_datatypes.ipynb  ColR.R  Initl.ipynb  Ordinal_dev.ipynb  README.md  Reproduce_TramDag_Experiment_6_1_complexDGP_CS_3Variables.ipynb  Reproduce_TramDag_Experiment_6_1_linearDGp_CS_3Variables.ipynb  Reproduce_TramDag_Experiment_6_1_linearDGp_lS_3Variables.ipynb  Reproduce_TramDag_Experiment_6_1_linearDGp_lS_3Variables_new.ipynb  Reproduce_TramDag_Experiment_6_2_mixed_datatypes_.ipynb  Reproduce_TramDag_Experiment_6_2_mixed_datatypes_1.ipynb  create_config.ipynb  dev.ipynb  dev_API_Reproduce_TramDag_Experiment_6_2_mixed_datatypes.ipynb  dev_Experiment_3vars_reproduce_R_TRAMDAG.ipynb  dev_Experiment_3vars_reproduce_R_vaca.ipynb  dev_Experiment_3vars_reproduce_TramDag_Figures.ipynb  dev_Experiment_4vars_1.ipynb  dev_Experiment_TramDag.ipynb  dev_Experiment_TramDag_figures_complex_shift_dgp_all_CI.ipynb  dev_Experiment_TramDag_figures_complex_shift_dgp_and_CS.ipynb  dev_Experiment_TramDag_figures_linear_shift_dgp_and_LS.ipynb  dev_Experiment_TramDag_figures_linear_shift_dgp_and_LS.py  dev_TRAMDAG_continous_working_version.ipynb  dev_TRAMDAG_ordinal_working_version.ipynb  dev_continous_loss.ipynb  dev_continous_loss2.ipynb  dev_counterfactual.ipynb  dev_counterfactual_ord.ipynb  dev_counterfactual_sampling.ipynb  dev_do_interventions.ipynb  (+57 more)
(+1466 files in other folders)
